# PacManproject

./: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  README.md  Random.h  Score.h  Stopwatch.h  World.cpp  World.h  main.cpp
.circleci/: config.yml
.github/workflows/: build-logic-only.yml
logic/: CMakeLists.txt
logic/include/logic/: AbstractFactory.h  Camera.h  EntityModel.h  Score.h  World.h
logic/include/logic/entities/: BlueGhost.h  Coin.h  Fruit.h  Ghost.h  OrangeGhost.h  PacMan.h  PinkGhost.h  RedGhost.h  Wall.h
logic/include/logic/patterns/: Observer.h  Subject.h
logic/include/logic/utils/: Position.h  Random.h  Stopwatch.h  Types.h
logic/src/: Camera.cpp  EntityModel.cpp  Score.cpp  World.cpp
logic/src/entities/: BlueGhost.cpp  Coin.cpp  Fruit.cpp  Ghost.cpp  OrangeGhost.cpp  PacMan.cpp  PinkGhost.cpp  RedGhost.cpp  Wall.cpp
logic/src/patterns/: Observer.cpp  Subject.cpp
logic/src/utils/: Random.cpp  Stopwatch.cpp
representation/: CMakeLists.txt
representation/include/representation/: Animation.h  AnimationController.h  ConcreteFactory.h  Game.h  SpriteManager.h
representation/include/representation/states/: LevelState.h  MenuState.h  PausedState.h  State.h  StateManager.h  TutorialIntroState.h  VictoryState.h
representation/include/representation/views/: CoinView.h  DoorView.h  EntityView.h  FruitView.h  GhostView.h  PacManView.h  WallView.h
representation/src/: AnimationController.cpp  ConcreteFactory.cpp  Game.cpp  SpriteManager.cpp
representation/src/states/: LevelState.cpp  MenuState.cpp  PausedState.cpp  State.cpp  StateManager.cpp  TutorialIntroState.cpp  VictoryState.cpp
representation/src/views/: CoinView.cpp  DoorView.cpp  EntityView.cpp  FruitView.cpp  GhostView.cpp  PacManView.cpp  WallView.cpp
resources/: map.txt
resources/highscores/: highscores.txt
resources/maps/: map.txt  map_big.txt  map_big2.txt  map_big3.txt  map_small.txt
src/: Game.cpp  Game.h  Random.cpp  Score.cpp  Stopwatch.cpp
src/logic/: Direction.h  TileType.h  World.cpp  World.h
src/representation/: Camera.cpp  Camera.h  EntityView.cpp  EntityView.h  GhostView.cpp  GhostView.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PacManView.cpp  PacManView.h  State.cpp  State.h  StateManager.cpp  StateManager.h
src/utils/: SpriteManager.cpp  SpriteManager.h  Stopwatch.cpp  Stopwatch.h
